--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="" async defer></script>
         <link rel="stylesheet" href="assets/css/common.css">
+        <link rel="stylesheet" href="assets/css/responsive.css">
     </head>
     <body>
         <header>
